--- a/application/src/main/resources/app/apicheckup.html
+++ b/application/src/main/resources/app/apicheckup.html
@@ -14,7 +14,8 @@ title: API checkup
         {name: "All", url: "/api/installations"},
         {name: "Search", url: "/api/installations/search?query=Port+Carquefou"},
         {name: "Geo search", url: "/api/installations/geosearch?lat=47.3&lng=-1.5&distance=1000"},
-        {name: "By id", url: "/api/installations/440030016"},
+        //{name: "By id", url: "/api/installations/440030016"},
+        {name: "By id", url: "/api/installations/440010005"},
         {name: "Random", url: "/api/installations/random"},
         {name: "Stats", url: "/api/installations/stats"},
         {name: "Suggest", url: "/api/towns/suggest/ca"},
